[package]
name = "pap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive", "cargo"] }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
strum = "0.26"
strum_macros = "0.26"
tee = { git = "https://github.com/fredrik-hammar/tee.git", branch = "master" }
toml = "0.8"
ureq = { version = "2.9", features = ["json"] }
versions = "6.1"
