[package]
name = "pap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tee = { git = "https://github.com/fredrik-hammar/tee.git", branch = "master" }
toml = "0.8"
ureq = { version = "2.9", features = ["json"] }
versions = "6.1"
